# prg_convert

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  dev_test.sh
.github/workflows/: checks.yaml  release.yaml
docs/plans/: 2026-03-10-download-data-design.md  2026-03-10-download-data-plan.md
docs/superpowers/plans/: 2026-06-18-01-timezone-fix.md  2026-06-18-02-terc-hardening.md  2026-06-18-03-output-writer-enum.md  2026-06-18-04-decouple-output-format-from-parser.md  2026-06-18-05-tryfrom-parsedargs.md  2026-06-18-06-clap-valueenum.md  2026-06-18-07-feature-gating.md  2026-06-18-08-performance.md  README.md
fixtures/: TERC_Urzedowy_2025-11-18.xml  sample_model2012.xml  sample_model2021.xml  terc_api_response_sample.xml
src/: cli.rs  common.rs  constants.rs  lib.rs  main.rs  model2012.rs  model2021.rs  terc.rs
src/crs/: epsg2180.json  epsg4326.json
tests/: e2e.rs
