[package]
name = "prg_convert"
version = "0.5.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
arrow = { version = "56.2.0", default-features = false, features = ["csv", "chrono-tz"] }
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.5.51", features = ["derive"] }
geo-types = "0.7.17"
geoarrow = "0.6.2"
geoparquet = "0.6.2"
glob = "0.3.3"
once_cell = "1.21.3"
parquet = { version = "56.2.0", features = ["arrow", "zstd", "simdutf8", "snap", "brotli"] }
proj4rs = { version = "0.1.9", features = ["crs-definitions"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "deflate64"] }

[profile.release]
lto = true
opt-level = 2
codegen-units = 8
