[package]
name = "prg_convert"
version = "0.6.4"
edition = "2024"

[[bin]]
name = "prg_convert"
required-features = ["cli"]

[features]
default = ["cli"]
cli = ["dep:clap", "dep:glob"]

[dependencies]
anyhow = "1.0.100"
arrow = { version = "58.1.0", default-features = false, features = ["csv", "chrono-tz"] }
base64 = "0.22.1"
chrono = { version = "0.4.42", default-features = false }
clap = { version = "4.5.51", features = ["derive"], optional = true }
geo-types = "0.7.18"
geoarrow = "0.8.0"
geoparquet = "0.8.0"
glob = { version = "0.3.3", optional = true }
parquet = { version = "58.1.0", features = ["arrow", "zstd", "simdutf8", "snap", "brotli"] }
proj4rs = { version = "0.1.9", features = ["crs-definitions"] }
quick-xml = { version = "0.38.3", features = ["serialize"] }
reqwest = { version = "0.13.1", features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.24.0"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "deflate64"] }

[dependencies.uuid]
version = "1.19.0"
features = [
    "v4",
]

[profile.release]
lto = true
opt-level = 2
codegen-units = 8
